k8s/ingress-nginx-nodeport.yaml
# How to re-create (kubectl):
#   kubectl delete -f ingress-nginx-nodeport.yaml --ignore-not-found
#   kubectl apply  -f ingress-nginx-nodeport.yaml
#   kubectl -n ingress-nginx get svc ingress-nginx-controller-nodeport
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-nodeport
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 90
      targetPort: http
      nodePort: 32080
