k8s/minio.yaml
# How to re-create (kubectl):
#   kubectl delete -f minio.yaml --ignore-not-found
#   kubectl apply  -f minio.yaml
#   kubectl get deploy minio && kubectl get svc -l app=minio -o wide

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2025-01-20T14-49-07Z
          args: ["server", "/data", "--console-address", ":9001"]
          ports:
            - containerPort: 9000 # S3 API
            - containerPort: 9001 # Web Console
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: minio-s3
  labels:
    app: minio
spec:
  type: NodePort
  selector:
    app: minio
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
      nodePort: 30103

---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  labels:
    app: minio
spec:
  type: NodePort
  selector:
    app: minio
  ports:
    - name: console
      port: 9001
      targetPort: 9001
      nodePort: 30104
